--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <ul class="navbar-nav">
-          <li><a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a></li>
+          <li><a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a></li>
           <li><a class="nav-link" href="#">Quem Somos</a></li>
           <li><a class="nav-link" href="#">Contato</a></li>
           <li><a class="nav-link" href="#">Login</a></li>
@@ -94,7 +94,7 @@
           <div class="card-body">
             <h5 class="card-title">Reservas</h5>
             <p class="card-text">Inscreva-se na lista de espera das próximas viagens</p>
-            <a href="#" class="btn btn-secondary">Vem conosco</a>
+            <a href="./cadastro_cep.html" class="btn btn-secondary">Vem conosco</a>
           </div>
         </article>
 
@@ -113,7 +113,7 @@
   </main>
 
   <footer class="bg-secondary p-3">
-    <p class="text-ligth m-0 text-center">&copy; FrontEnders </p>
+    <p class="text-light m-0 text-center">&copy; FrontEnders </p>
   </footer>
 
 
