envio pagina contatos Helder

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="navbar-nav">
           <li><a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a></li>
           <li><a class="nav-link" href="#">Quem Somos</a></li>
-          <li><a class="nav-link" href="#">Contato</a></li>
+          <li><a class="nav-link" href="/modulo2_resilia/contato.html">Contato</a></li>
           <li><a class="nav-link" href="#">Login</a></li>
         </ul>
       </div>
@@ -113,7 +113,7 @@
   </main>
 
   <footer class="bg-secondary p-3">
-    <p class="text-ligth m-0 text-center">&copy; FrontEnders </p>
+    <p class="text-light m-0 text-center">&copy; FrontEnders </p>
   </footer>
 
 
