aguardando link linkedin e github pedro e luciano

--- a/contato.html
+++ b/contato.html
@@ -119,8 +119,8 @@
               <p class="card-text">Uma páginas de informações incriveis para você</p>
               <div class="card-footer">
                 <div class="card-footer-inner">
-                  <img src="./img/github1.png">
-                  <a href="https://github.com/ramomfrz"><img src="./img/linkedin-logo.png"></a>
+                  <a href="#"><img src="./img/github1.png"></a>
+                  <a href=""><img src="./img/linkedin-logo.png"></a>
                 </div>
               </div>
             </div>
@@ -134,7 +134,7 @@
               <p class="card-text">Uma páginas de informações incriveis para você</p>
               <div class="card-footer">
                 <div class="card-footer-inner">
-                  <img src="./img/github1.png">
+                  <a href="#"><img src="./img/github1.png"></a>
                   <a href="https://www.linkedin.com/in/pedro-toni/"><img src="./img/linkedin-logo.png"></a>
                 </div>
               </div>
