--- a/rec_senha.html
+++ b/rec_senha.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
-    <title>Login</title>
+    <title>Redefinir Senha</title>
 </head>
 
 <body>
@@ -42,48 +42,26 @@
 
                 <div class="mb-3 w-100">
                     <div class="title-login mb-3 d-flex flex-column align-items-center">
-                        <h3>Já é cliente FrontEnders?</h3>
-                        <h5>Faça Login</h5>
+                        <img src="./img/icon3.png" width="50px" class="mb-2" />
+                        <h3>Esqueceu sua senha? </h3>
+                        <h5>A gente te ajuda</h5>
                     </div>
 
                     <div class="mb-3">
-                        <label for="emailBox">Email</label>
-                        <input type="email" class="form-control w-100" id="emailBox" placeholder="Digite seu e-mail"
+                        <label for="emailBoxRec">Email</label>
+                        <input type="email" class="form-control w-100" id="emailBoxRec" placeholder="Digite seu e-mail"
                             required>
                         <div id="validationServer05Feedback" class="invalid-feedback">
                             Por favor, informe um email válido.
                         </div>
-
-                    </div>
-                    <div>
-                        <label for="passwordBox">Senha</label>
-                        <input type="password" class="form-control w-100" id="passwordBox"
-                            placeholder="Digite sua senha" required>
-                        <div id="validationServer05Feedback" class="invalid-feedback">
-                            Sua senha precisa ter no minímo 6 caracteres
+                        <div class="valid-feedback">
+                            Email enviado! Siga as instruções para alterar sua senha.
                         </div>
                     </div>
-                    <a href="./rec_senha.html">
-                        <p>Esqueceu sua senha?</p>
-                    </a>
                 </div>
-                <div class="mb-3 form-check d-flex flex-column">
-                    <div class="d-flex align-items-center mb-3">
-                        <input type="checkbox" id="checkBox" class="form-check-input " class="Check-box" required>
-                        <label class="form-check-label" for="Check-box">Concordo com as <a href="#">
-                                Condições de Uso da FrontEnders.</a>
-                        </label>
 
-                    </div>
-                    <div>
-                        <input type="checkbox" class="form-check-input" class="Check-box">
-                        <label class="form-check-label" for="Check-box">Permanecer conectado</label>
-                    </div>
-                </div>
-                <button type="submit" id="join" class="btn btn-primary mt-4 mb-4" data-toggle="modal"
-                    data-target="#modal" disabled>Entrar</button>
-
-
+                <button type="submit" id="sendForm"
+                    class="btn btn-primary mt-4 mb-4 d-flex flex-column">Redefinir</button>
 
             </form>
         </main>
@@ -92,24 +70,6 @@
         </footer>
     </div>
 
-    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-
-                <button type="button" class="close w-10 p-1 align-self-end" data-dismiss="modal" aria-label="Fechar">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <div class="modal-body">
-                    Login realizado com sucesso!
-                </div>
-                <div class="modal-footer">
-
-                    <a href="./index.html" class="btn btn-primary">OK</a>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
 
@@ -122,7 +82,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
         integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
         crossorigin="anonymous"></script>
-    <script src="./src/front/controller/controller_login.js"></script>
+    <script src="./src/front/controller/controller_rec_senha.js"></script>
 </body>
 
 </html>
