--- a/quem-somos.html
+++ b/quem-somos.html
@@ -10,7 +10,7 @@
       integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="quem-somos.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Turismo Espacial</title>
   </head>
   <body>
@@ -48,7 +48,7 @@
       </nav>
       <section id="titulo" class="mt-4">
         <p class="text-center text-secondary pb-5 pt-4" id="paragrafoQuemSomos">
-          O nosso combustível são os seus sonhos! <br>
+          O nosso combustível são os seus sonhos! <br />
           (e muita hidrazina)
         </p>
       </section>
