--- a/contato.html
+++ b/contato.html
@@ -21,10 +21,10 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <ul class="navbar-nav">
-          <li><a class="nav-link" href="/modulo2_resilia/index.html">Home</a></li>
-          <li><a class="nav-link" href="#">Quem Somos</a></li>
+          <li><a class="nav-link" href="./index.html">Home</a></li>
+          <li><a class="nav-link" href="./quem-somos.html">Quem Somos</a></li>
           <li><a class="nav-link active" href="#">Contato<span class="sr-only">(current)</span></a></li>
-          <li><a class="nav-link" href="#">Login</a></li>
+          <li><a class="nav-link" href="./login.html">Login</a></li>
         </ul>
       </div>
     </nav>
