--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <ul class="navbar-nav">
           <li><a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a></li>
-          <li><a class="nav-link" href="#">Quem Somos</a></li>
+          <li><a class="nav-link" href="./quem-somos.html">Quem Somos</a></li>
 
           <li><a class="nav-link" href="./login.html">Login</a></li>
           <li><a class="nav-link" href="./contato.html">Contato</a></li>
