corrige link Spacetrip e trabalha css da page quem somos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <a class="navbar-brand" href="#">SpaceTrip</a>
+      <a class="navbar-brand" href="index.html">SpaceTrip</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -92,7 +92,7 @@
           <div class="card-body">
             <h5 class="card-title">Pacotes</h5>
             <p class="card-text">Conheça nossos planos de viagem e escolha o seu.</p>
-            <a href="#" class="btn btn-secondary">Saiba mais</a>
+            <a href="./planos-spacetrip.html" class="btn btn-secondary">Saiba mais</a>
           </div>
         </article>
 
