--- a/planos-spacetrip.html
+++ b/planos-spacetrip.html
@@ -32,7 +32,7 @@
         <div class="row" style="padding:50px;">
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card card-voyager">
-                    <img src="./img/plano1esc.jpg" class="card-img-top">
+                    <img src="img/" class="card-img-top">
                     <div class="card-img-overlay">
                         <h5 class="card-title text-white">PLANO VOYAGER</h5>
                         <div class="voyager-description" id="voyager-text">
