--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
     <div class="d-flex flex-column vw-100 vh-100">
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">SpaceTrip</a>
+                <a class="navbar-brand" href="index.html">SpaceTrip</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -88,7 +88,7 @@
             </form>
         </main>
         <footer class="bg-secondary p-3">
-            <p class="text-ligth m-0 text-center">&copy; FrontEnders</p>
+            <p class="text-light m-0 text-center">&copy; FrontEnders </p>
         </footer>
     </div>
 
