ajuste campos do form

--- a/contato.html
+++ b/contato.html
@@ -21,10 +21,10 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <ul class="navbar-nav">
-          <li><a class="nav-link" href="/modulo2_resilia/index.html">Home</a></li>
-          <li><a class="nav-link" href="#">Quem Somos</a></li>
+          <li><a class="nav-link" href="./index.html">Home</a></li>
+          <li><a class="nav-link" href="./quem-somos.html">Quem Somos</a></li>
           <li><a class="nav-link active" href="#">Contato<span class="sr-only">(current)</span></a></li>
-          <li><a class="nav-link" href="#">Login</a></li>
+          <li><a class="nav-link" href="./login.html">Login</a></li>
         </ul>
       </div>
     </nav>
@@ -33,7 +33,6 @@
   <main>
 
     <section id="titulo">
-
       <h1 class="text-center pt-5">Conta pra gente!</h1>
       <p class="text-center text-black pb-5">Sinta-se à vontade para nos dizer onde podemos melhorar e o que podemos
         fazer para solucionar seu problema.<br>Deixe-nos uma mensagem, reclamação ou sugestão.</p>
@@ -42,10 +41,10 @@
     <form class="form-contato">
       <label for="nomeContato">Nome Completo:<br></label>
       <input type="text" id="nomeContato">
-      <label for="telContato">Telefone:<br></label>
-      <input type="number" id="telContato">
       <label for="emailContato">E-mail:<br></label>
       <input type="email">
+      <label for="telContato">Telefone:<br></label>
+      <input type="number" id="telContato">
       <select id="tipoMensagem">
         <option value="">Dúvidas</option>
         <option value="">Sugestões</option>
@@ -57,6 +56,7 @@
       </div>
       <label for="msgContato">Deixe-nos uma mensagem<br></label>
       <textarea rows="5" characters="200" type="text"></textarea>
+      <label for="txtarea"><button id='txtarea'>Enviar</button></label>
     </form>
 
     <div class="cards-dev">
@@ -68,7 +68,7 @@
       <section class="container-fluid" id="cards">
         <div class="row justify-content-center">
 
-          <article class="card m-4" style="width: 18rem;">
+          <article class="card m-4" style="width: 16rem;">
             <img src="./img/perfil-nodja1.jpg" class="card-img-top imagem-posicao-card" alt="...">
             <div class="card-body">
               <h3 class="card-title">Nodja Lima</h3>
@@ -82,7 +82,7 @@
               </div>
           </article>
 
-          <article class="card m-4" style="width: 18rem;">
+          <article class="card m-4" style="width: 16rem;">
             <img src="./img/helder.jpg" class="card-img-top imagem-posicao-card" alt="...">
             <div class="card-body">
               <h3 class="card-title">Helder Lucas</h3>
@@ -96,7 +96,7 @@
               </div>
           </article>
 
-          <article class="card m-4" style="width: 18rem;">
+          <article class="card m-4" style="width: 16rem;">
             <img src="./img/manelzin1.jpg" class="card-img-top imagem-posicao-card" id="ramom">
             <div class="card-body">
               <h3 class="card-title">Ramom Ferraz</h3>
@@ -111,7 +111,7 @@
             </div>
           </article>
 
-          <article class="card m-4" style="width: 18rem;">
+          <article class="card m-4" style="width: 16rem;">
             <img src="./img/luciano.jpg" class="card-img-top imagem-posicao-card" alt="...">
             <div class="card-body">
               <h3 class="card-title">Luciano Freitas</h3>
@@ -126,11 +126,11 @@
             </div>
           </article>
 
-          <article class="card m-4 card-pedro" style="width: 18rem;">
+          <article class="card m-4" style="width: 16rem;">
             <img src="./img/pedro-boa.jpg" class="card-img-top imagem-posicao-card" alt="...">
             <div class="card-body">
-              <h3 class="card-title">Pedro Malabares</h3>
-              <h6 class="card-text">Pedro de Toni</h6>
+              <h3 class="card-title">Pedro Toni</h3>
+              <h6 class="card-text">Pedro Malabares</h6>
               <p class="card-text">Uma páginas de informações incriveis para você</p>
               <div class="card-footer">
                 <div class="card-footer-inner">
