corrige bugs nas imagens do carrossel

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -61,26 +61,26 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item imagem-carrossel active">
-              <img src="img/quemsomosquarto.jpg" class="d-block w-100" alt="...">
+              <img src="img/quemsomosquarto.jpg" class="d-block w-100 imagem-carrossel" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Acomodações de outro mundo</h5>
               </div>
             </div>
             <div class="carousel-item imagem-carrossel">
-              <img src="img/quemsomoscafé.jpg" class="d-block w-100" alt="...">
+              <img src="img/quemsomoscafé.jpg" class="d-block w-100 imagem-carrossel" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Nada de comida de astronauta, contamos com o melhor cardápio
                   da galáxia</h5>      
               </div>
             </div>
             <div class="carousel-item imagem-carrossel">
-              <img src="img/quemsomospedido.jpg" class="d-block w-100" alt="...">
+              <img src="img/quemsomospedido.jpg" class="d-block w-100 imagem-carrossel" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Proporcione um momento único para quem você ama</h5>
               </div>
             </div>
             <div class="carousel-item imagem-carrossel">
-              <img src="img/quemsomoscasaljanela.jpg" class="d-block w-100" alt="...">
+              <img src="img/quemsomoscasaljanela.jpg" class="d-block w-100 imagem-carrossel" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Compartilhe essa emoção com alguém especial</h5>
               </div>
