--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           <li><a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a></li>
           <li><a class="nav-link" href="./quem-somos.html">Quem Somos</a></li>
 
-          <li><a class="nav-link" href="./login.html">Login</a></li>
           <li><a class="nav-link" href="./contato.html">Contato</a></li>
+          <li><a class="nav-link" href="./login.html">Login</a></li>
 
         </ul>
       </div>
@@ -92,7 +92,7 @@
           <div class="card-body">
             <h5 class="card-title">Pacotes</h5>
             <p class="card-text">Conheça nossos planos de viagem e escolha o seu.</p>
-            <a href="#" class="btn btn-secondary">Saiba mais</a>
+            <a href="./planos-spacetrip.html" class="btn btn-secondary">Saiba mais</a>
           </div>
         </article>
 
