--- a/planos-spacetrip.html
+++ b/planos-spacetrip.html
@@ -12,16 +12,16 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">SpaceTrip</a>
+      <a class="navbar-brand" href="./index.html">SpaceTrip</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <ul class="navbar-nav">
-          <li><a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a></li>
-          <li><a class="nav-link" href="#">Quem Somos</a></li>
-          <li><a class="nav-link" href="#">Contato</a></li>
-          <li><a class="nav-link" href="#">Login</a></li>
+          <li><a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a></li>
+          <li><a class="nav-link" href="./quem-somos.html">Quem Somos</a></li>
+          <li><a class="nav-link" href="./contato.html">Contato</a></li>
+          <li><a class="nav-link" href="./login.html">Login</a></li>
         </ul>
       </div>
     </nav>
@@ -41,7 +41,7 @@
                           incluindo todos os equipamentos de segurança necessários para tal atividade. <br><br>
                           Ideal para aventureiros e curiosos de primeira viagem que ainda não tiveram nenhuma
                           experiência fora da Terra e desejam desbravar o universo.
-                          <h4 class="text-warning font-weight-bold">Garanta já sua vaga!</h4>
+                          <a class="text-reset" href="./cadastro_cep.html"><h4 class="text-warning font-weight-bold">Garanta já sua vaga!</h4></a>
                           </p>
                           </div>
                     </div>
@@ -59,7 +59,7 @@
                           e entretenimento enquanto observa uma vista galáctica sem igual. <br><br>
                           É o passeio ideal para a família que deseja
                           desfrutar de uma experiência inesquecível. <br>
-                          <h4 class="text-warning font-weight-bold">Clique para fazer seu cadastro!</h4>
+                          <a class="text-reset" href="./cadastro_cep.html"><h4 class="text-warning font-weight-bold">Clique para fazer seu cadastro!</h4></a>
                         </p>
                       </div>
                     </div>
@@ -77,7 +77,7 @@
                           de todo o conforto das nossas Suítes Exclusivas.<br><br>
                           Está planejando a lua de mel dos sonhos? Quer ter momentos extraordinários com as pessoas que você ama?
                           O Plano Webb é o que você está procurando.
-                          <h4 class="text-warning font-weight-bold">Não perca esta chance!</h4>
+                          <a class="text-reset" href="./cadastro_cep.html"><h4 class="text-warning font-weight-bold">Não perca esta chance!</h4></a>
                         </p>
                       </div>
                     </div>
