--- a/cadastro_cep.html
+++ b/cadastro_cep.html
@@ -11,16 +11,16 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <a class="navbar-brand" href="#">SpaceTrip</a>
+      <a class="navbar-brand" href="./index.html">SpaceTrip</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <ul class="navbar-nav">
           <li><a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a></li>
-          <li><a class="nav-link" href="#">Quem Somos</a></li>
-          <li><a class="nav-link" href="#">Contato</a></li>
-          <li><a class="nav-link" href="#">Login</a></li>
+          <li><a class="nav-link" href="./quem-somos.html">Quem Somos</a></li>
+          <li><a class="nav-link" href="./contato.html">Contato</a></li>
+          <li><a class="nav-link" href="./login.html">Login</a></li>
         </ul>
       </div>
     </nav>
