--- a/contato.html
+++ b/contato.html
@@ -105,7 +105,7 @@
               <div class="card-footer">
                 <div class="card-footer-inner">
                   <a href="https://github.com/ramomfrz"><img src="./img/github1.png"></a>
-                  <a href="https://github.com/ramomfrz"><img src="./img/linkedin-logo.png"></a>
+                  <a href="https://www.linkedin.com/in/ramomferraz/"><img src="./img/linkedin-logo.png"></a>
                 </div>
               </div>
             </div>
@@ -119,7 +119,7 @@
               <p class="card-text">Uma páginas de informações incriveis para você</p>
               <div class="card-footer">
                 <div class="card-footer-inner">
-                  <a href="#"><img src="./img/github1.png"></a>
+                  <a href=""><img src="./img/github1.png"></a>
                   <a href=""><img src="./img/linkedin-logo.png"></a>
                 </div>
               </div>
@@ -134,7 +134,7 @@
               <p class="card-text">Uma páginas de informações incriveis para você</p>
               <div class="card-footer">
                 <div class="card-footer-inner">
-                  <a href="#"><img src="./img/github1.png"></a>
+                  <a href="https://github.com/pedrotoni"><img src="./img/github1.png"></a>
                   <a href="https://www.linkedin.com/in/pedro-toni/"><img src="./img/linkedin-logo.png"></a>
                 </div>
               </div>
