correcao borda seletorContato e placeholder da txtarea

--- a/contato.html
+++ b/contato.html
@@ -71,7 +71,7 @@
 
           <div>
             <label for="emailBox">Digite sua mensagem</label>
-            <textarea style="width: 20rem" class="form-control" rows="5" id="emailBox" placeholder="" required></textarea>
+            <textarea style="width: 20rem" class="form-control" rows="5" id="emailBox" placeholder="Houston, we have a problem!" required></textarea>
             <div id="validationServer05Feedback" class="invalid-feedback">
               Por favor, informe um nome e-mal
             </div>
