correcao caminho das imgs quemSomos

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -45,7 +45,7 @@
   <div class="row m-0" id="img-qs">
     <div class="col">
       <div class="w-100">
-        <img src="/img/quemsomoscafé.jpg" class="imagens-qs" alt="...">
+        <img src="./img/quemsomoscafé.jpg" class="imagens-qs" alt="...">
         <div class="card-body">
           <h5 class="card-title">Nada de comida de astronauta</h5>
           <p class="card-text">Temos o melhor cardápio da galáxia</p>
@@ -54,7 +54,7 @@
     </div>
     <div class="col">
       <div class="w-100">
-        <img src="/img/quemsomosquarto.jpg" class="imagens-qs" alt="...">
+        <img src="./img/quemsomosquarto.jpg" class="imagens-qs" alt="...">
         <div class="card-body">
           <h5 class="card-title">Acomodações de outro mundo</h5>
           <p class="card-text">O máximo de conforto para os tripulantes</p>
@@ -63,7 +63,7 @@
     </div>
     <div class="col">
       <div class="w-100">
-        <img src="/img/quemsomoscasaljanela.jpg" class="imagens-qs" alt="...">
+        <img src="./img/quemsomoscasaljanela.jpg" class="imagens-qs" alt="...">
         <div class="card-body">
           <h5 class="card-title">Momentos incriveis</h5>
           <p class="card-text">Divida essa experiência com alguém especial</p>
