correcao cards contato, alinhados os icones git e linkedin

--- a/contato.html
+++ b/contato.html
@@ -103,7 +103,7 @@
               <div class="card-body">
                 <h3 class="card-title">Nodja Lima</h3>
                 <h6 class="card-text">Mommy.Dev</h6>
-                <p class="card-text">Conheça nossos planos de viagem e escolha o seu.</p>
+                <p class="card-text">Me desenvolvo e evoluo com meus filhos.</p>
                 <div class="card-footer">
                   <div class="card-footer-inner">
                     <a href="https://github.com/NodjaLima"><img src="./img/github1.png"></a>
@@ -117,7 +117,7 @@
               <div class="card-body">
                 <h3 class="card-title">Helder Lucas</h3>
                 <h6 class="card-text">linderholm</h6>
-                <p class="card-text">Inscreva-se na lista de espera das próximas viagens</p>
+                <p class="card-text">Paixão por T.I desde pequeno, não há nada como trabalhar com isso!</p>
                 <div class="card-footer">
                   <div class="card-footer-inner">
                     <a href="https://github.com/linderholm"><img src="./img/github1.png"></a>
@@ -131,7 +131,7 @@
               <div class="card-body">
                 <h3 class="card-title">Ramom Ferraz</h3>
                 <h6 class="card-text">Manelzin</h6>
-                <p class="card-text">Uma páginas de informações incriveis para você</p>
+                <p class="card-text">Aficcionado por tecnologia, sempre tive aptidão para desenvolver nessa área.</p>
                 <div class="card-footer">
                   <div class="card-footer-inner">
                     <a href="https://github.com/ramomfrz"><img src="./img/github1.png"></a>
@@ -146,7 +146,7 @@
               <div class="card-body">
                 <h3 class="card-title">Luciano Freitas</h3>
                 <h6 class="card-text">Luciano Freitas</h6>
-                <p class="card-text">Uma páginas de informações incriveis para você</p>
+                <p class="card-text">Não sou tão bom com o CSS, mas no JavaScript tenho talento!</p>
                 <div class="card-footer">
                   <div class="card-footer-inner">
                     <a href=""><img src="./img/github1.png"></a>
@@ -161,13 +161,14 @@
               <div class="card-body">
                 <h3 class="card-title">Pedro Toni</h3>
                 <h6 class="card-text">Pedro Malabares</h6>
-                <p class="card-text">Uma páginas de informações incriveis para você</p>
+                <p class="card-text">Malabarista, cantor, rapper, empresário, vendedor de perfume pirata e gênio dos scripts, esse sou eu.</p>
                 <div class="card-footer">
                   <div class="card-footer-inner">
                     <a href="https://github.com/pedrotoni"><img src="./img/github1.png"></a>
                     <a href="https://www.linkedin.com/in/pedro-toni/"><img src="./img/linkedin-logo.png"></a>
                   </div>
                 </div>
+              </div>
             </article>
 
           </div>
